<resources>
    <string name="app_name">Comedor</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="usuario">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="tittle">Inicia sesión para continuar.</string>
    <string name="btn">INGRESAR</string>
    <string name="search_hint">Search Names</string>
<<<<<<< HEAD
    <string name="search_label">Search</string>
    <string name="asis">ASISTENCIAS</string>
    <string name="comen">COMENSALES</string>
=======
    <string name="pie_chart">Asistencias por Programa</string>
    <string name="search_label">Search</string>
    <string name="asis">ASISTENCIAS</string>
    <string name="comen">COMENSALES</string>
    <string name="reporteTitle">REPORTES</string>
    <string name="yearLabel">Seleccione Año</string>
    <string-array name="year_array">
        <item>2015</item>
    </string-array>
    <string name="mesLabel">Seleccione Mes</string>
    <string-array name="mes_array">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>
    <string name="turnoLabel">Seleccione Turno</string>
    <string-array name="turno_array">
        <item>Mañana</item>
        <item>Tarde</item>
        <item>Noche</item>
    </string-array>
>>>>>>> 04883d5a1020b7f25fea68bd2a543e9dd270b8b3
</resources>
