<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tittle"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:layout_alignBottom="@+id/user"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        style="@style/Base.TextAppearance.AppCompat.Light.Widget.PopupMenu.Small" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/usuario"
        android:id="@+id/user"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/pass"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/pass"
        android:id="@+id/pass"
        android:layout_marginBottom="70dp"
        android:layout_above="@+id/btnIngresar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn"
        android:id="@+id/btnIngresar"
        android:textStyle="bold"
        android:textSize="18dp"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"
        android:background="#3F51B5"
        android:textColor="#FFFFFF"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Bienvenido a Comedor"
        android:id="@+id/textView"
        style="@style/Base.TextAppearance.AppCompat.Title"
        android:layout_above="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/textView"
        android:layout_marginBottom="10dp"
        android:background="#3F51B5"
        android:src="@mipmap/food" />

</RelativeLayout>
